--- a/dropzone/templates/dropzone/dropzone.html
+++ b/dropzone/templates/dropzone/dropzone.html
@@ -1,9 +1,7 @@
-{% load staticfiles %}
-
-<div id='id_{{ upload_name }}_dropzone' class='dropzone' name="{{ upload_name }}" data-acceptedFiles="{{ acceptedFiles }}" data-maxFilesize="{{ maxFilesize }}" data-upload-path="{{ upload_path }}" data-preview="{{ preview }}">
+<div id="id_{{ upload_name }}_dropzone" class="dropzone" name="{{ upload_name }}"{% for k, v in dropzone_config.items %} data-{{ k }}="{{ v }}"{% endfor %}>
   <div class="vertical-align">
 
-    <div class='dz-message text-center text-muted'>
+    <div class="dz-message text-center text-muted">
       <span class="glyphicon {{ upload_glyphicon }}"></span>
       <p>{{ placeholder|safe }}</p>
     </div>
@@ -12,4 +10,6 @@
 
 </div>
 
-<input for='id_{{ upload_name }}_dropzone' id='id_{{ upload_name }}' style="position:absolute;opacity:0;height:0;" type="text" name="{{ upload_name }}" value="{{ value }}" {{ attrs }}/>
+<input for="id_{{ upload_name }}_dropzone" id="id_{{ upload_name }}" style="position:absolute;opacity:0;height:0;" type="text" name="{{ upload_name }}" value="{{ value }}" {{ attrs }}/>
+
+
