--- a/dropzone/templates/dropzone/dropzone.html
+++ b/dropzone/templates/dropzone/dropzone.html
@@ -1,15 +1,13 @@
-<div id="id_{{ upload_name }}_dropzone" class="dropzone" name="{{ upload_name }}"{% for k, v in dropzone_config.items %} data-{{ k }}="{{ v }}"{% endfor %}>
-  <div class="vertical-align">
+<div id="djdropzone-{{ uid }}" class="djdropzone" data-field-name="{{ name }}" data-dropzone-config="{{ dropzone_config_json }}">
+  {# <div class="vertical-align"> #}
 
-    <div class="dz-message text-center text-muted">
-      <span class="glyphicon {{ upload_glyphicon }}"></span>
-      <p>{{ placeholder|safe }}</p>
-    </div>
+  {#   <div class="dz-message text-center text-muted"> #}
+  {#     <span class="glyphicon {{ upload_glyphicon }}"></span> #}
+  {#     <p>{{ placeholder|safe }}</p> #}
+  {#   </div> #}
 
-  </div>
+  {# </div> #}
 
 </div>
 
-<input for="id_{{ upload_name }}_dropzone" id="id_{{ upload_name }}" style="position:absolute;opacity:0;height:0;" type="text" name="{{ upload_name }}" value="{{ value }}" {{ attrs }}/>
-
-
+<input id="djdropzone-{{ uid }}-input" type="hidden" name="{{ name }}" value="{{ value }}" />
