--- a/example_project/dropzone/templates/dropzone/dropzone.html
+++ b/example_project/dropzone/templates/dropzone/dropzone.html
@@ -1,12 +1,12 @@
 <div id="djdropzone-{{ uid }}" class="djdropzone" data-field-name="{{ name }}" data-dropzone-config="{{ dropzone_config_json }}">
-  {# <div class="vertical-align"> #}
+  <div class="vertical-align">
 
-  {#   <div class="dz-message text-center text-muted"> #}
-  {#     <span class="glyphicon {{ upload_glyphicon }}"></span> #}
-  {#     <p>{{ placeholder|safe }}</p> #}
-  {#   </div> #}
+    <div class="dz-message text-center text-muted">
+      {# TODO: Make this message customizable. #}
+      <h4>Drag and drop files in this box or click here to select them from your computer.</h4>
+    </div>
 
-  {# </div> #}
+  </div>
 
 </div>
 
