--- a/example_project/dropzone/templates/dropzone/dropzone.html
+++ b/example_project/dropzone/templates/dropzone/dropzone.html
@@ -1,4 +1,6 @@
 <div id="djdropzone-{{ uid }}" class="djdropzone" data-field-name="{{ name }}" data-dropzone-config="{{ dropzone_config_json }}">
+  <div class="djdropzone-loading" style="position: absolute; margin-top: -10px;">Loading previously uploaded files...</div>
+
   <div class="vertical-align">
 
     <div class="dz-message text-center text-muted">
