No need for positioning anymore.

--- a/dropzone/templates/dropzone/dropzone.html
+++ b/dropzone/templates/dropzone/dropzone.html
@@ -1,5 +1,5 @@
 <div id="djdropzone-{{ uid }}" class="djdropzone" data-field-name="{{ name }}" data-dropzone-config="{{ dropzone_config_json }}">
-  <div class="djdropzone-loading hidden" style="position: absolute; margin-top: -10px;">Loading previously uploaded files...</div>
+  <div class="djdropzone-loading hidden">Loading previously uploaded files...</div>
 
   <div class="dropzone">
     <div class="vertical-align">
