--- a/dropzone/templates/dropzone/dropzone.html
+++ b/dropzone/templates/dropzone/dropzone.html
@@ -1,7 +1,7 @@
 <div id="djdropzone-{{ uid }}" class="djdropzone" data-field-name="{{ name }}" data-dropzone-config="{{ dropzone_config_json }}">
   <div class="djdropzone-loading hidden">Loading previously uploaded files...</div>
 
-  <div class="dropzone">
+  <div id="djdropzone-dropzone-{{ uid }}" class="djdropzone-dropzone">
     <div class="vertical-align">
 
       <div class="dz-message text-center text-muted">
