--- a/example_project/example_project/templates/example.html
+++ b/example_project/example_project/templates/example.html
@@ -12,10 +12,10 @@
 
 <body>
 
-  <from>
+  <form>
     {{ form.as_p }}
     <input type="submit" value="Submit" />
-  </from>
+  </form>
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
   <script src="{% static "js/dropzone/dropzone.js" %}"></script>
