Installed Bootstrap for the `.hidden` to work.

--- a/example_project/example_project/templates/example.html
+++ b/example_project/example_project/templates/example.html
@@ -6,6 +6,7 @@
 <head>
 
   <link href="{% static "css/dropzone/dropzone.css" %}" type="text/css" rel="stylesheet" />
+  <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" type="text/css" rel="stylesheet" />
 
   <title>Example Page</title>
 </head>
@@ -18,6 +19,7 @@
   </form>
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+  <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   <script src="{% static "js/dropzone/dropzone.js" %}"></script>
   <script src="{% static "js/dropzone/dropzone.django.js" %}"></script>
   <script src="{% static "js/jquery.cookie.js" %}"></script>
