--- a/example_project/example_project/templates/example.html
+++ b/example_project/example_project/templates/example.html
@@ -15,7 +15,7 @@
 
   <form>
     {{ form.as_p }}
-    <input type="submit" value="Submit" />
+    <input class="btn btn-default" type="submit" value="Submit" />
   </form>
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
