Implemented submission warning.

--- a/example_project/example_project/templates/example.html
+++ b/example_project/example_project/templates/example.html
@@ -13,8 +13,13 @@
 
 <body>
 
-  <form>
+  <form data-djdropzone-djdform-opts="{&quot;submitWarningWhileUploading&quot;: true}">
     {{ form.as_p }}
+
+    <div class="djdropzone-submit-warning hidden">
+      <p class="text-danger">Warning! Some files are still uploading and they won't be part of the submission before they've finished.</p>
+      <input class="btn btn-default" type="submit" value="Submit Anyway" />
+    </div>
     <input class="btn btn-default" type="submit" value="Submit" />
   </form>
 
