Changing the instructions.

--- a/dropzone/templates/dropzone/dropzone.html
+++ b/dropzone/templates/dropzone/dropzone.html
@@ -6,7 +6,7 @@
 
       <div class="dz-message text-center text-muted">
         {# TODO: Make this message customizable. #}
-        <h4>Drag and drop files in this box or click here to select them from your computer.</h4>
+        <h4>Click here to select files from your computer or drag and drop them in this box.</h4>
       </div>
 
     </div>
