--- a/dropzone/templates/dropzone/dropzone.html
+++ b/dropzone/templates/dropzone/dropzone.html
@@ -6,7 +6,7 @@
 
       <div class="dz-message text-center text-muted">
         {# TODO: Make this message customizable. #}
-        <h4>Click here to select files from your computer or drag and drop them in this box.</h4>
+        <strong>Click</strong> here to select files from your computer or <strong>drag and drop</strong> them in this box.
       </div>
 
     </div>
